[package]
edition      = "2024"
name         = "badge-firmware"
rust-version = "1.88"
version      = "0.1.0"
default-run  = "step_01_hello_world"

[[bin]]
name = "step_01_hello_world"
path = "./src/bin/step_01_hello_world.rs"

[[bin]]
name = "step_02_leds"
path = "./src/bin/step_02_leds.rs"

[[bin]]
name = "step_03_tasks"
path = "./src/bin/step_03_tasks.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32s3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt"] }
esp-alloc        = { version = "0.9.0", features = ["defmt"] }
esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
disobey2026badge = "0.1.2"
palette = { version = "0.7.6", default-features = false, features = ["alloc", "approx", "libm", "named", "named_from_str", "phf"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
